# AM215_final_project

./: .gitignore  LICENSE  README.md  config.yaml  config_profile.yaml  eda.ipynb  pyproject.toml  requirements-dev.txt  requirements-lock.txt  requirements.txt  run.py
.github/workflows/: ci.yml  docs.yml
data/: conversion_log.txt  conversion_stats.json  download_log.txt  trip_data_catalog.json
data/inventory/: 202509-citibike-tripdata_inventory.json  202510-citibike-tripdata_inventory.json  inventory_summary.json
data/parquet/stations/: station_info.parquet
data/stations/: fetch_summary.json  station_info_raw.json
docs/: conf.py  index.rst  installation.rst  make.bat  models.rst
docs/_build/doctrees/: api.doctree  index.doctree  installation.doctree  models.doctree  quickstart.doctree
docs/_build/html/: .buildinfo  api.html  genindex.html  index.html  installation.html  models.html  objects.inv  py-modindex.html  quickstart.html  search.html  searchindex.js
docs/_build/html/_modules/: index.html
docs/_build/html/_modules/citibike/evaluation/: cross_validation.html  metrics.html
docs/_build/html/_modules/citibike/models/: base.html  baseline.html  markov.html  naive.html
docs/_build/html/_modules/citibike/utils/: data_loader.html  duckdb_utils.html  helpers.html
docs/_build/html/_sources/: api.rst.txt  quickstart.rst.txt
evaluation/: __init__.py  cross_validation.py  metrics.py
models/: __init__.py  base.py  baseline.py  markov.py  naive.py
outputs/: cv_results_baseline_20251206_165032.json  cv_results_baseline_20251206_165609.json  cv_results_baseline_20251206_191913.json  cv_results_markov_20251206_173336.json  cv_results_markov_20251206_194316.json  cv_results_markov_20251206_195252.json  cv_results_markov_20251211_160627.json  cv_results_markov_20251211_171407.json  cv_results_markov_20251211_172233.json  cv_results_markov_20251211_191326.json  cv_results_markov_20251212_003812.json  cv_results_persistence_20251206_201127.json  cv_results_station_avg_20251206_201605.json
profiling/: PROFILING_ANALYSIS.md  profiling_output.txt
scripts/: compare_daily_cv_results.py  compute_inventory.py  fetch_station_data.py  optimize_lookback_window.py  plot_model_comparison.py  regenerate_lookback_plots.py  visualize_markov_transitions.py
scripts/analysis/: compute_inventory.py  fetch_station_data.py  optimize_lookback_window.py  visualize_markov_transitions.py
scripts/data/: data_catalog.py  station_metadata.py
src/: convert_existing_csvs.py  create_unified_view.sql  data_catalog.py  download_and_convert.py  station_metadata.py  upload_to_gdrive.py
src/citibike/: __init__.py
src/citibike/evaluation/: metrics.py
src/citibike/models/: __init__.py
src/citibike/utils/: data_loader.py  helpers.py
tests/: __init__.py  conftest.py  generate_golden_files.py  test_metrics.py  test_models.py  test_regression.py  test_utils.py
tests/golden_files/: markov_predictions.npy  markov_transition_stats.json  metrics_values.json  pipeline_metrics.json  state_conversion.json  temporal_flow_hourly_flows.json  temporal_flow_predictions.npy
utils/: __init__.py  data_loader.py  duckdb_utils.py  helpers.py
