[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "citibike"
version = "0.1.0"
description = "CitiBike NYC bike station inventory prediction models"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "AM215 Final Project Team"},
]
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "folium>=0.14.0",
    "plotly>=5.15.0",
    "tqdm>=4.65.0",
    "requests>=2.31.0",
    "pyyaml>=6.0",
    "duckdb>=0.9.0",
    "scipy>=1.11.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "jupyter>=1.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "-ra",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "regression: marks tests as regression tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.ruff]
target-version = "py310"
line-length = 100
exclude = [
    ".git",
    ".venv",
    "venv",
    "__pycache__",
    "*.egg-info",
    ".eggs",
    "build",
    "dist",
    "*.ipynb",  # Exclude notebooks from linting
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "E402",   # module level import not at top (needed for sys.path manipulation)
    "E722",   # bare except (legacy code)
    "B006",   # mutable default argument (legacy code)
    "B007",   # unused loop variable (common in enumerate patterns)
    "B008",   # do not perform function calls in argument defaults
    "B905",   # zip without explicit strict
    "C401",   # unnecessary generator (style preference)
    "F841",   # unused variable (common in plotting code)
    "SIM105", # use contextlib.suppress (legacy code style)
    "SIM108", # use ternary operator instead of if-else
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff.lint.isort]
known-first-party = ["citibike"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
exclude = [
    "venv",
    ".venv",
    "tests",
]
# Stricter options (optional, enable gradually)
# disallow_untyped_defs = true
# disallow_incomplete_defs = true
# check_untyped_defs = true
# no_implicit_optional = true
# warn_redundant_casts = true
# warn_unused_ignores = true

[tool.coverage.run]
source = ["src/citibike"]
omit = ["tests/*", "venv/*", "scripts/*"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]

